# email-sender

./: .gitignore  README.md  pyproject.toml  send_emails.py
